k8s/webapp-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ***-app
  name: **-app
  namespace: ***
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ***-app
  template:
    metadata:
      labels:
        app: ***-app
    spec:
      containers:
      - name: ***-app
        image: *dockerhubimage*/***-app:1.1
        ports:
          - containerPort: 8080
