k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: db
