k8s/kanban-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ***-ui
  name: ***-ui
  namespace: ***
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ***-ui
  type: ClusterIP
