k8s/ingress-webappui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ***-ingress
  namespace: ***
spec:
  rules:
  - host: sr-****.***.garden
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ***-ui
            port:
              number: 80
